<resources>
    <string name="app_name">N-notepad</string>
    <string name="mainBtn_entry">新規登録</string>
    <string name="entryBtn_save">保存</string>
    <string name="entryEdit_title">タイトルを入力</string>
    <string name="entryEdit_body">本文を入力</string>
    <string name="browseBtn_ebit">編集</string>
    <string name="browseBtn_del">削除</string>
    <string name="browseBtn_back">戻る</string>
    <string name="entryBtn_cansel">キャンセル</string>
</resources>
